[package]
name = "bucky-raw-codec"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "MIT"
repository = "https://github.com/buckyos/bucky-raw-codec.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = { version = '0.12', default-features = false, features = ['serde'] }
log = "0.4.21"
primitive-types = '0.12'
protobuf = { version = '2', features = ['with-bytes'] }
hex = "0.4.3"
bucky-raw-codec-derive = { path = "../raw-codec-derive", optional = true}

[build-dependencies]
protoc-rust = '2'
chrono = '0.4'
protoc-bin-vendored = '3'


[features]
derive = ["bucky-raw-codec-derive"]
